--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Let's Go BlueSox!</title>
+    <title>Simple Ajax.</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <link href='stylesheets/normalize.css' rel='stylesheet' type='text/css' />
     <link href='stylesheets/styles.css' rel='stylesheet' type='text/css' />
